14918
Using Scala 2.8.0.Beta1-RC7, trying to compile the attached Link.scala and StringOptionAdapter.scala will succeed if scalac is executed with

{code}
$$ scalac StringOptionAdapter.scala Link.scala
{code}

but compilation will fail as below if I change the order

{code}
$$ scalac Link.scala StringOptionAdapter.scala
Link.scala:4: error: type mismatch;
 found   : java.lang.Class[StringOptionAdapter]
 required: java.lang.Class[_ <: javax.xml.bind.annotation.adapters.XmlAdapter]
 @XmlJavaTypeAdapter(classOf[StringOptionAdapter]) val title:
Option[String] = None
                           ^
{code}
